# sri-chat-api

./: .env.example  .gitignore  README.md  client.http  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py
app/core/: config.py  constants.py  db.py
app/decorators/: singleton.py
app/modules/chats/: __init__.py  dto.py  inyections.py  model.py  prompts_templates.py  query.py  trimmer.py
app/modules/files/: __init__.py  inyections.py
app/routes/: chats.py  files.py
app/services/files/: __init__.py  inyections.py  loader.py  vector_store.py
media/: Registro_Único_de_Contribuyentes_(RUC).txt  RÉGIMEN_VOLUNTARIO_IMPOSITIVO_UNICO_Y_TEMPORAL.txt  Régimen_Simplificado_para_Emprendedores_y_Negocios_Populares_(RIMPE).txt  impuesto_a_la_renta.txt
